--- a/Frontend/src/assets/styles/pages/_GigEdit.scss
+++ b/Frontend/src/assets/styles/pages/_GigEdit.scss
@@ -12,13 +12,14 @@
                 width: 100%;
                 background: $clrSecondary0;
                 border: 1px solid $clrSecondary4;
-                border-radius: 0 0 0.5em 0.5em;
+                border-radius: 0.5em;
 
                 .input-group {
                     gap: 1em;
                     grid-template-columns: 1fr;
 
                     .info {
+                        position: relative;
                         gap: 0.25em;
 
                         label {
@@ -28,6 +29,12 @@
                         p {
                             font-size: 0.9em;
                             color: $clrSecondary6;
+                        }
+
+                        .character-counter {
+                            position: absolute;
+                            bottom: 5px;
+                            right: 25px;
                         }
                     }
 
@@ -53,11 +60,10 @@
                         padding: 0;
                     }
 
-                    &:nth-of-type(3),
                     &:nth-of-type(4) {
                         input {
                             max-height: 30px;
-                            width: 120px;
+                            width: 90px;
                         }
                     }
 
@@ -104,20 +110,40 @@
                 justify-content: space-between;
                 gap: 1em;
                 width: 100%;
+                margin-block-end: 1em;
 
                 button {
                     font-weight: bold;
                     font-size: 1rem;
-                    padding: 10px 16px;
+                    padding: 0.75em;
+                    border-radius: 0.5em;
                     transition: all 0.3s;
+                    gap: 0.25em;
+                    align-items: center;
 
                     &:first-child {
                         background: $clrSecondary3;
                         color: $clrPrimary2;
 
+                        i {
+                            transform: rotate(90deg);
+                            margin-block-end: 2px;
+
+                            svg {
+                                fill: $clrPrimary2;
+                                transition: all 0.3s;
+                            }
+                        }
+
                         &:hover {
                             background: $clrSecondary6;
                             color: $clrPrimary1;
+
+                            i {
+                                svg {
+                                    fill: $clr4;
+                                }
+                            }
                         }
                     }
 
@@ -125,9 +151,24 @@
                         background: $bgColor2;
                         color: $clrPrimary1;
 
+                        i {
+                            margin-block-end: 2px;
+
+                            svg {
+                                fill: $clrPrimary1;
+                                transition: all 0.3s;
+                            }
+                        }
+
                         &:hover {
                             color: $bgColor2;
                             background: $clrSecondary1;
+
+                            i {
+                                svg {
+                                    fill: $clrPrimary2;
+                                }
+                            }
                         }
                     }
                 }
@@ -149,7 +190,7 @@
                 }
 
                 h3 {
-                    color: $clrSecondary7;
+                    color: $clrSecondary8;
                 }
             }
 
