--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -11,7 +11,7 @@ $clrSecondary1: #f5f5f5;
 $clrSecondary9: #f1fdf7;
 $clrSecondary14: #efeff0;
 $clrSecondary10: #e4e5e7;
-$clrSecondary13: #e0e0e0;  //not used
+$clrSecondary13: #e0e0e0; //not used
 $clrSecondary2: #dadbdd;
 $clrSecondary3: #ced1d6;
 $clrSecondary45: #c5c6c9;
@@ -32,10 +32,10 @@ $bgColor7: #df6e6e;
 
 $clr1: #19a463;
 $clr2: #78cdd2;
-$clr3: #29bd49;  //not used
-$clr4: #d83b3b;  //not used
-$clr5: #0070ba;  
-$clr6: #ffff54;  //not used
+$clr3: #29bd49; //not used
+$clr4: #d83b3b;
+$clr5: #0070ba;
+$clr6: #ffff54; //not used
 $clr7: #ffbe5b;
 $clr8: #ff8a8a;
 $clr9: #fa3232;
@@ -49,6 +49,6 @@ $clr16: #f96363;
 $clr17: #2e25ad;
 
 // Breakpoints
-$mobile-breakpoint: 460px;  //not used
-$narrow-breakpoint: 720px;  //not used
-$normal-breakpoint: 960px;  //not used
+$mobile-breakpoint: 460px; //not used
+$narrow-breakpoint: 720px; //not used
+$normal-breakpoint: 960px; //not used
