--- a/Frontend/src/assets/styles/cmps/_UserChat.scss
+++ b/Frontend/src/assets/styles/cmps/_UserChat.scss
@@ -168,7 +168,8 @@
               }
             }
           }
-
+        }
+        .chat-footer {
           .input-container {
             textarea {
               width: 100%;
@@ -206,44 +207,42 @@
               }
             }
 
-            .message-footer {
+            .char-count {
+              display: grid;
               justify-content: end;
-
-              .character-count {
-                span {
-                  color: $clrSecondary6;
-                }
+              span {
+                color: $clrSecondary6;
               }
             }
           }
-        }
 
-        .message-options {
-          align-items: center;
-          justify-content: space-between;
-          padding: 0.75em 0 1.5em;
-
-          .addition {
-            button {
-              margin-inline-start: 0.5em;
-              background-color: $clrPrimary1;
-            }
-          }
-
-          .send-message-button {
-            font-family: 'macan-bold';
-            gap: 0.5em;
-            padding: 0.625em 1.05em;
-            line-height: 1.5em;
-            background-color: $clrPrimary2;
-            color: $clrPrimary1;
-            border-radius: 0.5rem;
-            font-size: 1em;
+          .message-options {
             align-items: center;
+            justify-content: space-between;
+            padding: 0.75em 0 1.5em;
 
-            &:hover {
-              background-color: $clrSecondary8;
-              transition: background-color 0.3s ease-in-out;
+            .addition {
+              button {
+                margin-inline-start: 0.5em;
+                background-color: $clrPrimary1;
+              }
+            }
+
+            .send-message-button {
+              font-family: 'macan-bold';
+              gap: 0.5em;
+              padding: 0.625em 1.05em;
+              line-height: 1.5em;
+              background-color: $clrPrimary2;
+              color: $clrPrimary1;
+              border-radius: 0.5rem;
+              font-size: 1em;
+              align-items: center;
+
+              &:hover {
+                background-color: $clrSecondary8;
+                transition: background-color 0.3s ease-in-out;
+              }
             }
           }
         }
