deleted all possible svgs, thank me later

--- a/Frontend/src/assets/styles/cmps/_SearchBar.scss
+++ b/Frontend/src/assets/styles/cmps/_SearchBar.scss
@@ -73,16 +73,12 @@
                 border: 1px solid $clrPrimary2;
                 border-left: none;
                 background: $clrPrimary2;
+                align-items: center;
 
                 &:hover {
                     opacity: 0.8;
                 }
 
-                img {
-                    width: 16px;
-                    height: 16px;
-                    align-self: center;
-                }
             }
         }
     }
