--- a/Frontend/src/assets/styles/cmps/_LoginSignup.scss
+++ b/Frontend/src/assets/styles/cmps/_LoginSignup.scss
@@ -35,11 +35,9 @@
           font-weight: 400;
         }
 
-        img {
-          width: 12px;
-          height: 12px;
+        svg {
           align-self: self-start;
-          margin-top: 0.5em;
+          // margin-top: 0.5em;
         }
       }
     }
