--- a/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
@@ -31,7 +31,7 @@
           flex: 0 0 auto;
           padding: 0 9px;
 
-          img {
+          svg {
             border-radius: 0.25em;
           }
 
@@ -65,6 +65,9 @@
     }
 
     .carousel-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       position: absolute;
       top: 50%;
       background: $clrPrimary1;
