--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -60,6 +60,6 @@
 @import "pages/UserProfile";
 @import "pages/GigEdit";
 @import "pages/GigPurchase";
-@import "pages/DashboardPage";
-@import "pages/OrdersPage";
+@import "pages/SellerDashboard";
+@import "pages/BuyerDashboard.scss";
 @import "pages/Chat";
