--- a/Frontend/src/assets/styles/pages/BuyerDashboard.scss
+++ b/Frontend/src/assets/styles/pages/BuyerDashboard.scss
@@ -1,5 +1,6 @@
-.orders-page {
+.buyer-dashboard-page {
     margin-bottom: 2em;
+    background: $clrSecondary12;
 
     .buyer-orders-list {
         gap: 0.5em;
@@ -8,6 +9,7 @@
 
             &.mobile,
             &.mini-tablet {
+                display: grid;
                 padding: 0.5em;
                 border-radius: 0.5em;
                 border: 1px solid #dadbdd;
@@ -15,12 +17,13 @@
                 grid-template-columns: repeat(5, 1fr);
                 grid-template-rows: auto auto auto auto auto 48px;
                 gap: 0.5em;
+                position: relative;
 
                 .order-title {
                     grid-column: 1 / -1;
                     grid-row: 1;
-                    color: $clrSecondary8;
                     transition: all 0.3s;
+                    font-size: 18px;
 
                     &:hover {
                         color: $bgColor5;
@@ -31,7 +34,6 @@
                 .order-image {
                     grid-column: 1 / 3;
                     grid-row: 2 / -1;
-                    height: 165px;
 
                     img {
                         border-radius: 0.5em;
@@ -57,18 +59,42 @@
 
                             &:last-child {
                                 color: $clrSecondary8;
+
+                                &.pending {
+                                    color: $clr15;
+                                }
+
+                                &.denied {
+                                    color: $clr9;
+                                }
+
+                                &.accepted {
+                                    color: $clr11;
+                                }
+
+                                &.completed {
+                                    color: $clr13;
+                                }
+
+                                &.reviewed {
+                                    color: $clrSecondary4;
+                                }
                             }
                         }
                     }
 
                     .order-options {
                         justify-content: space-between;
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 99%;
 
                         span {
                             cursor: pointer;
 
                             i {
-                                width: 48px;
+                                width: 48x;
                                 height: 48px;
 
                                 svg {
