--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -485,9 +485,13 @@
 
 // Seller's orders page media query
 
-.dashboard-page {
+.seller-dashboard-page {
   @media (max-width: 600px) {
     padding: 1.25em 1.5em 5em 1.5em;
+  }
+
+  @media (max-width: 480px) {
+    padding: 1.25em 1em 5em 1em;
   }
 
   @media (min-width: 601px) {
@@ -964,13 +968,17 @@
 
 // Buyer's orders page media query
 
-.orders-page {
-  @media(max-width: 1400px) {
-    padding: 2em 1em;
+.buyer-dashboard-page {
+  @media (max-width: 600px) {
+    padding: 1.25em 1.5em 5em 1.5em;
   }
 
-  @media(max-width: 600px) {
-    padding: 2em 0.5em;
+  @media (max-width: 480px) {
+    padding: 1.25em 1em 5em 1em;
+  }
+
+  @media (min-width: 601px) {
+    padding: 1.25em 2em 10em 2em;
   }
 
   .buyer-orders-list {
@@ -978,19 +986,32 @@
 
       &.mobile,
       &.mini-tablet {
-        .order-info {
+        @media(max-width: 480px) {
+          .order-image {
+            height: 120px;
+          }
 
-          .order-id,
-          .category-name,
-          .seller-name,
-          .order-status {
-            @media(max-width: 480px) {
+          .order-info {
+
+            .order-id,
+            .category-name,
+            .seller-name,
+            .order-status {
               span {
                 &:first-child {
                   display: none;
                 }
+
+                text-overflow: ellipsis;
+                overflow: hidden;
               }
             }
+          }
+        }
+
+        @media(min-width: 481px) {
+          .order-image {
+            height: 165px;
           }
         }
       }
