Cant find a way to fix bug in chat.jsx

--- a/Frontend/src/assets/styles/pages/_Chat.scss
+++ b/Frontend/src/assets/styles/pages/_Chat.scss
@@ -83,7 +83,9 @@
           }
 
           .last-msg {
+            max-width: 250px;
             text-overflow: ellipsis;
+            overflow: hidden;
             color: $clrPrimary2;
           }
         }
