--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -217,6 +217,9 @@
                 max-height: 48px;
                 text-overflow: ellipsis;
                 overflow: hidden;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 2;
               }
 
               .seller-name {
@@ -225,6 +228,7 @@
                 font-size: 14px;
                 align-self: end;
                 padding-bottom: 5px;
+                gap: 0.25em;
               }
 
               .order-status {
