--- a/Frontend/src/assets/styles/pages/_SellerDashboard.scss
+++ b/Frontend/src/assets/styles/pages/_SellerDashboard.scss
@@ -41,8 +41,7 @@
     }
 
     .dashboard-container {
-        margin: auto;
-        max-width: 1200px;
+        width: 100%;
 
         h3 {
             margin-bottom: 0.5em;
@@ -204,6 +203,12 @@
                                     text-overflow: ellipsis;
                                     overflow: hidden;
                                     width: 280px;
+                                    transition: all 0.3s;
+
+                                    &:hover {
+                                        text-decoration: none;
+                                        color: $bgColor5;
+                                    }
                                 }
                             }
 
@@ -221,6 +226,12 @@
                                     text-overflow: ellipsis;
                                     overflow: hidden;
                                     align-self: center;
+                                    transition: all 0.3s;
+
+                                    &:hover {
+                                        text-decoration: none;
+                                        color: $bgColor5;
+                                    }
                                 }
                             }
 
@@ -375,8 +386,15 @@
 
                                 a {
                                     color: $clrSecondary5;
-                                    text-overflow: ellipsis;
-                                    overflow: hidden;
+                                    display: -webkit-box;
+                                    -webkit-box-orient: vertical;
+                                    -webkit-line-clamp: 2;
+                                    transition: all 0.3s;
+
+                                    &:hover {
+                                        text-decoration: none;
+                                        color: $bgColor5;
+                                    }
                                 }
                             }
 
@@ -401,6 +419,12 @@
                                     max-width: 100px;
                                     text-overflow: ellipsis;
                                     overflow: hidden;
+                                    transition: all 0.3s;
+
+                                    &:hover {
+                                        text-decoration: none;
+                                        color: $bgColor5;
+                                    }
                                 }
                             }
 
