--- a/Frontend/src/assets/styles/pages/_Chat.scss
+++ b/Frontend/src/assets/styles/pages/_Chat.scss
@@ -1,105 +1,109 @@
 .chats {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
-  z-index: 20;
+  // z-index: 20;
   width: 100%;
   height: 100%;
+  display: flex;
+  .chats-nav {
+    .chat-header {
+      width: 100%;
+      padding: 1em 1em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: $clrPrimary1;
+      border-block-end: 1px solid $clrSecondary4;
+      color: $clrPrimary2;
+      font-weight: 700;
 
-  .chat-header {
-    width: 100%;
-    padding: 1em 1em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: $clrPrimary1;
-    border: 1px solid $clrSecondary4;
-    color: $clrPrimary2;
-    font-weight: 700;
-
-    span {
-      font-size: 1.25em;
-    }
-
-    i {
-      align-self: center;
-
-      svg {
-        width: 1em;
-        height: 1em;
-      }
-    }
-  }
-
-  .chat-body {
-    width: 100%;
-    height: 100%;
-    background-color: $clrSecondary2;
-
-    .buyers,
-    .sellers {
-      .title {
-        padding: 1em;
-        color: $clrSecondary5;
+      span {
+        font-size: 1.25em;
       }
 
-      .chat {
-        position: relative;
-        width: 100%;
-        padding: 0.5em 1em;
-        background-color: $clrSecondary3;
-        border: 1px solid clrSecondary4;
-        display: flex;
-        align-items: center;
-
-        img {
-          width: 3.5em;
-          height: 3.5em;
-          border-radius: 50%;
-          margin-inline-end: 0.75em;
-          object-fit: cover;
-        }
-
-        .chat-info {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-
-          .user-info {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-
-            .username {
-              margin-inline-start: 0.75em;
-              font-size: 0.85em;
-              color: $clrSecondary7;
-            }
-
-            .time {
-              font-size: 0.85em;
-              color: $clrSecondary7;
-            }
-          }
-
-          .last-msg {
-            max-width: 250px;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            color: $clrPrimary2;
-          }
-        }
-      }
-
-      .erase-chat {
-        position: absolute;
-        bottom: 1em;
-        right: 1em;
+      i {
+        align-self: center;
 
         svg {
-          height: 1em;
           width: 1em;
-          fill: $clrSecondary7;
+          height: 1em;
+        }
+      }
+    }
+
+    .chat-body {
+      height: 70vh;
+      width: 100%;
+      // height: 100%;
+      background-color: $clrSecondary2;
+
+      .buyers,
+      .sellers {
+        .title {
+          padding: 1em;
+          color: $clrSecondary5;
+        }
+
+        .chat {
+          position: relative;
+          width: 100%;
+          padding: 0.5em 1em;
+          background-color: $clrSecondary3;
+          border: 1px solid clrSecondary4;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+
+          img {
+            width: 3.5em;
+            height: 3.5em;
+            border-radius: 50%;
+            margin-inline-end: 0.75em;
+            object-fit: cover;
+          }
+
+          .chat-info {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+
+            .user-info {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+
+              .username {
+                margin-inline-start: 0.75em;
+                font-size: 0.85em;
+                color: $clrSecondary7;
+              }
+
+              .time {
+                font-size: 0.85em;
+                color: $clrSecondary7;
+              }
+            }
+
+            .last-msg {
+              max-width: 250px;
+              text-overflow: ellipsis;
+              overflow: hidden;
+              color: $clrPrimary2;
+            }
+          }
+        }
+
+        .erase-chat {
+          position: absolute;
+          bottom: 1em;
+          right: 1em;
+
+          svg {
+            height: 1em;
+            width: 1em;
+            fill: $clrSecondary7;
+          }
         }
       }
     }
