seller dashboard design overhaul

--- a/Frontend/src/assets/styles/cmps/_CategoryNavbar.scss
+++ b/Frontend/src/assets/styles/cmps/_CategoryNavbar.scss
@@ -42,6 +42,10 @@
                     transform: scaleX(1);
                     transform-origin: bottom left;
                 }
+
+                &:hover {
+                    text-decoration: none;
+                }
             }
         }
 
