--- a/Frontend/src/assets/styles/pages/BuyerDashboard.scss
+++ b/Frontend/src/assets/styles/pages/BuyerDashboard.scss
@@ -103,7 +103,7 @@
                             cursor: pointer;
 
                             i {
-                                width: 48x;
+                                width: 48px;
                                 height: 48px;
 
                                 svg {
