start of about page

--- a/Frontend/src/assets/styles/pages/_About.scss
+++ b/Frontend/src/assets/styles/pages/_About.scss
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     background-color: $clrSecondary12;
+    padding: 1em 2em;
     .profile-image{
         height: 200px;
         width: max-content;
