--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -1085,6 +1085,14 @@
 // User chat media query
 
 .chat-box-wrapper {
+  @media (min-width: 601px) {
+    width: 55%;
+  }
+  @media (max-width: 600px) {
+    width: 100%;
+  }
+
+
   .chat-box {
     @media (max-width: 600px) {
       width: 100vw;
@@ -1100,7 +1108,7 @@
 
     @media (min-width: 601px) {
       position: sticky;
-      width: 450px;
+      // width: 450px;
       border-radius: 4px;
       border: 1px solid $clrSecondary10;
       height: 765px;
