--- a/Frontend/src/assets/styles/pages/_Chat.scss
+++ b/Frontend/src/assets/styles/pages/_Chat.scss
@@ -1,11 +1,11 @@
 .chats {
+  display: flex;
   position: absolute;
   z-index: 20;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
   padding: 2em 0;
 
   &.desk{
@@ -119,12 +119,12 @@
     border: 1px solid $clrSecondary3;
     border-radius: 1.5em;
     margin-inline-start: 1em;
+    flex-grow: 1;
     .info-message{
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 100%;
       color: $clrSecondary8;
       img{
         height: 200px;
